=head1 NAME

Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf

(As of $Date$ $Revision$)

=head2 Changes in Devel::NYTProf 2.06

  NOTE: The file format has changed. Files from 2.04 and 2.05
  can still be read by this version.

  Now builds on Windows, with thanks to Jan Dubois!

  XS subs (xsubs) are now automatically associated with a source
    file that defines normal subs in the same package.
  Callers and timing information for xsubs are now shown at the
    bottom of the corresponding source file.
  References to xsubs in reports now include a working link.

  Subroutine inclusive time no longer counts time
    spent recursed into the same subroutine. That time is
    now recorded separately, along with the max recursion depth.

  The profiler takes more care to avoid changing $!.

  The html global subroutine index pages no longer list subs that
    were never called.
  Exclusive and Inclusive time column positions have been switched
    to be consistent with how the times are presented elsewhere.

  Removed use of vfscanf() to improve portability to Windows
    and old unix systems, thanks to Jan Dubois.

=head2 Changes in Devel::NYTProf 2.05 (svn r498) 8th Oct 2008

  Fixed alteration of $! during profiling thanks to Slaven Rezic.
  Fixed clock_gettime() clock selection to fallback to CLOCK_REALTIME
    if CLOCK_MONOTONIC is not available, e.g, on linux 2.4.
  Fixed error when application ends after DB::disable_profile().

  Added some docs to Devel::NYTProf::Apache
  Added clock=N option to enable user to select the clock.

=head2 Changes in Devel::NYTProf 2.04 (svn r483) 1st Oct 2008

  Fixed rare divide-by-zero error in reporting code.
  Fixed rare core dump in reporting code.
  Fixed detection of #line directives to be more picky.
  Fixed some compiler warnings thanks to Richard Foley.

  Added on-the-fly ~90% zip compression thanks to Nicholas Clark.
    Reduces data file size per million statements executed