@@ -1,0 +1,47 @@
+attribute	application	test20-streval.p
+attribute	basetime	0
+attribute	clock_id	0
+attribute	nv_size	0
+attribute	perl_version	0
+attribute	profiler_duration	0
+attribute	profiler_end_time	0
+attribute	profiler_start_time	0
+attribute	ticks_per_sec	0
+attribute	total_stmts_discounted	0
+attribute	total_stmts_duration	0
+attribute	total_stmts_measured	0
+attribute	xs_version	0
+fid_block_time	1	3	[ 0 3 ]
+fid_block_time	1	5	[ 0 1 ]
+fid_block_time	1	8	0	0
+fid_block_time	1	8	1	1
+fid_block_time	1	8	2	1	[ 0 1 ]
+fid_block_time	1	11	0	0
+fid_block_time	1	11	1	2
+fid_block_time	1	11	2	1	[ 0 2 ]
+fid_fileinfo	1	[ /.../test20-streval.p   1 2 0 0 ]
+fid_fileinfo	2	[ (eval 0)[test20-streval.p:8] 1 8 2 2 0 0 ]
+fid_fileinfo	3	[ (eval 0)[test20-streval.p:11] 1 11 3 2 0 0 ]
+fid_fileinfo	4	[ (eval 0)[test20-streval.p:11] 1 11 4 2 0 0 ]
+fid_line_time	1	3	[ 0 3 ]
+fid_line_time	1	5	[ 0 1 ]
+fid_line_time	1	8	0	0
+fid_line_time	1	8	1	1
+fid_line_time	1	8	2	1	[ 0 1 ]
+fid_line_time	1	11	0	0
+fid_line_time	1	11	1	2
+fid_line_time	1	11	2	1	[ 0 2 ]
+fid_sub_time	1	3	[ 0 3 ]
+fid_sub_time	1	5	[ 0 1 ]
+fid_sub_time	1	8	0	0
+fid_sub_time	1	8	1	1
+fid_sub_time	1	8	2	1	[ 0 1 ]
+fid_sub_time	1	11	0	0
+fid_sub_time	1	11	1	2
+fid_sub_time	1	11	2	1	[ 0 2 ]
+profile_modes	fid_block_time	block
+profile_modes	fid_line_time	line
+profile_modes	fid_sub_time	sub
+sub_caller	main::foo	1	11	[ 2 0 0 0 0 0 0 ]
+sub_caller	main::foo	1	8	[ 1 0 0 0 0 0 0 ]
+sub_subinfo	main::foo	[ 1 3 3 3 0 0 0 0 ]
